syntax = "proto3";

package goChat;

// Defines the service between client and server.
service Chat {
    rpc RouteChat(stream ChatMessage) returns (stream ChatMessage) {}

    rpc EstablishConnection(InviteRequest) returns (InviteResponse) {}

    rpc Register(ClientInfo) returns (InviteResponse) {}

    rpc GetClientList(Empty) returns (ClientList) {}
}

message Empty {

}

message ChatMessage {
    string sender = 1;
    int32 receiver = 2;
    string message = 3;
}

message ClientInfo {
    string sender = 1;
}

message ClientList {
    repeated string clients = 1;
}

message InviteRequest {
    string requester = 1;
    repeated string clients = 2;
}

message InviteResponse {
    bool response = 1;
}
